--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,24 +1,16 @@
 ---
 layout: default
 ---
+<h1>{{ page.title }}</h1>
 
-<div class="category-page">
-  <h1>カテゴリ: {{ page.category }}</h1>
-
-  <div class="post-list">
-    {%- for post in site.categories[page.category] -%}
-    <article class="post-card">
-      {% if post.image %}
-        <div class="thumb">
-          <img src="{{ post.image | relative_url }}" alt="{{ post.title }}">
-        </div>
-      {% endif %}
-      <div class="content">
-        <h2><a class="post-link" href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
-        <p class="post-meta">{{ post.date | date: "%Y-%m-%d" }}</p>
-        <p class="excerpt">{{ post.excerpt | strip_html | truncate: 120 }}</p>
-      </div>
-    </article>
-    {%- endfor -%}
-  </div>
-</div>
+<ul class="category-posts">
+  {% assign cname = page.category %}
+  {% for post in site.posts %}
+    {% if post.categories contains cname %}
+      <li>
+        <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+        <small>（{{ post.date | date: "%Y-%m-%d" }}）</small>
+      </li>
+    {% endif %}
+  {% endfor %}
+</ul>
